--- a/src/app/components/componente2/componente2.component.scss
+++ b/src/app/components/componente2/componente2.component.scss
@@ -3,31 +3,22 @@
   bottom: 0;
   left: 0;
   right: 0;
-  z-index: 1000;
-  /* Asegura que esté por encima de otros elementos */
-  height: 55px;
-  /* Ajusta aquí la altura de las pestañas en tus ion-tabs */
+  height: 65px; /* Ajusta la altura del menú según tus necesidades */
   display: flex;
   align-items: center;
-  /* Centra verticalmente el contenido dentro del menú */
   padding: 10px;
-  /* Espaciado interior opcional */
 }
 
-.fixed-bottom-menu ion-icon  {
-  justify-content: center;
-  font-size: 20px;
-  /* Ajusta el tamaño de los íconos según sea necesario */
-  margin-right: 15px;
-  /* Espacio entre los íconos y el texto, ajusta según sea necesario */
-
+.fixed-bottom-menu ion-icon {
+  color: #0d0d0d;
+  font-size: 25px; /* Ajusta el tamaño de los íconos según sea necesario */
+  margin-right: 10px; /* Espacio entre los íconos y el texto, ajusta según sea necesario */
 }
 
-.main-content {
-  /* Ajusta el espacio superior del contenido principal para evitar que se superponga con el menú fijo */
-  padding-bottom: 35px;
-  /* Ajusta aquí la misma altura que en .fixed-bottom-menu */
-}
-ion-tab-button{
+ion-tab-button {
   font-size: 15px;
+  color: #0d0d0d;
+}
+ion-tabs{
+  --ion-background-color:#79F2E6;
 }
