--- a/src/app/pages/Shop/historial/historial.page.scss
+++ b/src/app/pages/Shop/historial/historial.page.scss
@@ -8,7 +8,8 @@
   }
   
   .custom-card {
-    background: #222222;
+    background: #010626;
+    box-shadow: 6px 2px 6px #79F2E6;
     display: flex;
     flex-direction: column; /* Coloca el contenido en columna */
     align-items: center;
@@ -57,6 +58,6 @@
   
  
   ion-content {
-    --background: url(https://i.pinimg.com/originals/77/42/0d/77420df3f9e33db5b79ee25455d3340e.png);
+    --background: url(https://w0.peakpx.com/wallpaper/955/141/HD-wallpaper-purple-science-tech.jpg);
   }
   
