--- a/src/app/components/componente1/componente1.component.html
+++ b/src/app/components/componente1/componente1.component.html
@@ -2,13 +2,13 @@
   <!-- LOGO DEL CARRITO -->
   <div class="demo-section" slot="end">
     <mat-icon matBadge="0" matBadgeColor="primary" [routerLink]="['/carrito']" aria-hidden="false">
-      <ion-icon style="width: 30px; height: 30px; margin-right: 80px; color: white;" name="cart-outline"></ion-icon>
+      <ion-icon style="width: 30px; height: 30px; margin-right: 80px; color: #0D0D0D;;" name="cart-outline"></ion-icon>
     </mat-icon>
   </div>
 
   <!-- MENÚ DE BÚSQUEDA -->
   <ion-buttons slot="start">
-    <ion-menu-button style="color: white;"></ion-menu-button>
+    <ion-menu-button style="color: #0D0D0D;;"></ion-menu-button>
   </ion-buttons>
 
   <!-- EL BUSCADOR -->
