--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,6 +1,5 @@
 #container {
   text-align: center;
-
   position: absolute;
   left: 0;
   right: 0;
@@ -37,7 +36,7 @@ ion-card ion-card-title {
 
 /* Fondo */
 ion-content {
-  --background: url(https://i.pinimg.com/originals/77/42/0d/77420df3f9e33db5b79ee25455d3340e.png);
+  --background: url(https://w0.peakpx.com/wallpaper/955/141/HD-wallpaper-purple-science-tech.jpg);
   display: flex;
   justify-content: center; /* Centrar horizontalmente */
   align-items: center; /* Centrar verticalmente */
@@ -47,7 +46,8 @@ ion-content {
 /* Estilos de la tarjeta */
 ion-card {
   border-radius: 45px;
-  background-color: rgba(0, 0, 0, 0.521);
+  background-color: #050b36;
+  box-shadow: 0px 2px 6px #79f2e6;
   max-width: 450px;
   width: 90%;
   margin: 150px auto 0 auto; /* Margen superior de 40px, centrar horizontalmente */
@@ -78,40 +78,10 @@ ion-card {
 }
 
 /* Estilos de botones */
-button {
+ion-button {
+  --background: #F079F2;
   border-radius: 15px;
-  font-size: 25px;
+  font-size: 15px;
+  margin: 5px;
 }
 
-/* Estilos para secciones y etiquetas */
-section {
-  display: table;
-}
-
-.example-label {
-  display: table-cell;
-  font-size: 14px;
-  margin-left: 8px;
-  min-width: 120px;
-}
-
-.example-button-row {
-  display: table-cell;
-  max-width: 600px;
-}
-
-.example-button-row .mat-mdc-button-base {
-  margin: 8px 8px 8px 0;
-}
-
-.example-flex-container {
-  display: flex;
-  justify-content: space-between;
-  flex-wrap: wrap;
-}
-
-.example-button-container {
-  display: flex;
-  justify-content: center;
-  width: 120px;
-}
