--- a/src/app/pages/Shop/tienda/tienda.page.html
+++ b/src/app/pages/Shop/tienda/tienda.page.html
@@ -11,32 +11,30 @@
       <ion-card>
         <ion-card-title style="font-size: 40px;">Bienvenido Administrador</ion-card-title>
         <ion-row>
-          <ion-button class="center-buttons" shape="round" color="dark" [routerLink]="['/agregar-p-admin']">Agregar
-            productos</ion-button>
-          <ion-button class="center-buttons" shape="round" color="dark" [routerLink]="['./tienda']">Ver
-            usuarios</ion-button>
+          <ion-button class="center-buttons" shape="round" [routerLink]="['./tienda']">Ver usuarios</ion-button>
+          <ion-button class="center-buttons" shape="round" [routerLink]="['/agregar-p-admin']">Agregar productos</ion-button>
         </ion-row>
       </ion-card>
     </ion-row>
   </ion-grid>
   <!--VISTA DEL USUARIO-->
-
   <ion-grid>
     <ion-card-title>TimeTech Audible</ion-card-title>
     <br>
     <ion-card-title>Audífonos Gamers</ion-card-title>
     <!--PRIMER PRODUCTO-->
     <ion-row>
-      <ion-card *ngFor="let producto of arregloProductos">
+      <ion-card>
         <ion-img src="assets/AUDIFONOS GAMERS/ag3.webp" alt="aqui habia una imagen"></ion-img>
         <ion-card-header>
-          <ion-card-title class="ion-title">{{ producto.nombreProducto }}<br> {{ producto.descripcion }} <br> {{ producto.stockPropducto }}</ion-card-title>
+          <ion-card-title class="ion-title">Audífonos gamers<br>rojos con negro</ion-card-title>
+          <ion-card-content>
+            <td>{{ dinero | currency:'USD':'symbol':'4.0-0' }}</td>
+            <ion-button class="center-buttons" *ngIf="rol == 1" [routerLink]="['/ag3']">Ver detalles</ion-button>
+            <ion-button class="center-buttons" *ngIf="rol == 2" [routerLink]="['/editar-p-admin']">Modificar</ion-button>
+            <ion-button class="borrar" *ngIf="rol == 2" >Eliminar</ion-button>
+          </ion-card-content>
         </ion-card-header>
-        <ion-card-content>
-          <td>{{ producto.precioProducto | currency:'USD':'symbol':'4.0-0' }}</td>
-          <ion-button class="center-buttons" color="dark" [routerLink]="['/ag3']">Ver detalles</ion-button>
-          <ion-button class="center-buttons" *ngIf="rol == 2" color="dark" [routerLink]="['/editar-p-admin']">Modificar</ion-button>
-        </ion-card-content>
       </ion-card>      
       <!--PRIMER PRODUCTO-->
       <ion-card>
@@ -45,8 +43,9 @@
           <ion-card-title class="ion-title">Audífonos gamers<br>negro con naranja</ion-card-title>
           <ion-card-content>
             <td>{{ dinero2 | currency:'USD':'symbol':'4.0-0' }}</td>
-            <ion-button class="center-buttons" color="dark" [routerLink]="['/ag4']">Ver detalles</ion-button>
-            <ion-button class="center-buttons" *ngIf="rol == 2" color="dark" [routerLink]="['/editar-p-admin']">Modificar</ion-button>
+            <ion-button class="center-buttons" *ngIf="rol == 1" [routerLink]="['/ag4']">Ver detalles</ion-button>
+            <ion-button class="center-buttons" *ngIf="rol == 2" [routerLink]="['/editar-p-admin']">Modificar</ion-button>
+            <ion-button class="borrar" *ngIf="rol == 2" >Eliminar</ion-button>
           </ion-card-content>
         </ion-card-header>
       </ion-card>
@@ -57,8 +56,9 @@
           <ion-card-title class="ion-title">Audífonos gamers<br>lila con blanco</ion-card-title>
           <ion-card-content>
             <td>{{ dinero3 | currency:'USD':'symbol':'4.0-0' }}</td>
-            <ion-button class="center-buttons" color="dark" [routerLink]="['/ag5']">Ver detalles</ion-button>
-            <ion-button class="center-buttons" *ngIf="rol == 2" color="dark" [routerLink]="['/editar-p-admin']">Modificar</ion-button>
+            <ion-button class="center-buttons" *ngIf="rol == 1" [routerLink]="['/ag5']">Ver detalles</ion-button>
+            <ion-button class="center-buttons" *ngIf="rol == 2" [routerLink]="['/editar-p-admin']">Modificar</ion-button>
+            <ion-button class="borrar" *ngIf="rol == 2" >Eliminar</ion-button>
           </ion-card-content>
         </ion-card-header>
       </ion-card>
@@ -74,8 +74,9 @@
           <ion-card-title class="ion-title">Audífonos Bluetooth<br>morados</ion-card-title>
           <ion-card-content>
             <td>{{ dinero4 | currency:'USD':'symbol':'4.0-0' }}</td>
-            <ion-button class="center-buttons" color="dark" [routerLink]="['/ai1']">Ver detalles</ion-button>
-            <ion-button class="center-buttons" *ngIf="rol == 2" color="dark" [routerLink]="['/editar-p-admin']">Modificar</ion-button>
+            <ion-button class="center-buttons" *ngIf="rol == 1" [routerLink]="['/ai1']">Ver detalles</ion-button>
+            <ion-button class="center-buttons" *ngIf="rol == 2" [routerLink]="['/editar-p-admin']">Modificar</ion-button>
+            <ion-button class="borrar" *ngIf="rol == 2" >Eliminar</ion-button>
           </ion-card-content>
         </ion-card-header>
       </ion-card>
@@ -86,8 +87,9 @@
           <ion-card-title class="ion-title">Audífonos Bluetooth<br>azules</ion-card-title>
           <ion-card-content>
             <td>{{ dinero5 | currency:'USD':'symbol':'4.0-0' }}</td>
-            <ion-button class="center-buttons" color="dark" [routerLink]="['/ai4']">Ver detalles</ion-button>
-            <ion-button class="center-buttons" *ngIf="rol == 2" color="dark" [routerLink]="['/editar-p-admin']">Modificar</ion-button>
+            <ion-button class="center-buttons" *ngIf="rol == 1" [routerLink]="['/ai4']">Ver detalles</ion-button>
+            <ion-button class="center-buttons" *ngIf="rol == 2" [routerLink]="['/editar-p-admin']">Modificar</ion-button>
+            <ion-button class="borrar" *ngIf="rol == 2" >Eliminar</ion-button>
           </ion-card-content>
         </ion-card-header>
       </ion-card>
@@ -98,8 +100,9 @@
           <ion-card-title class="ion-title">Audífonos Bluetooth<br>verdes</ion-card-title>
           <ion-card-content>
             <td>{{ dinero6 | currency:'USD':'symbol':'4.0-0' }}</td>
-            <ion-button class="center-buttons" color="dark" [routerLink]="['/ai6']">Ver detalles</ion-button>
-            <ion-button class="center-buttons" *ngIf="rol == 2" color="dark" [routerLink]="['/editar-p-admin']">Modificar</ion-button>
+            <ion-button class="center-buttons" *ngIf="rol == 1" [routerLink]="['/ai6']">Ver detalles</ion-button>
+            <ion-button class="center-buttons" *ngIf="rol == 2" [routerLink]="['/editar-p-admin']">Modificar</ion-button>
+            <ion-button class="borrar" *ngIf="rol == 2" >Eliminar</ion-button>
           </ion-card-content>
         </ion-card-header>
       </ion-card>
@@ -116,8 +119,9 @@
           <ion-card-title class="ion-title">Reloj Analógico<br>negro con azules</ion-card-title>
           <ion-card-content>
             <td>{{ dinero7 | currency:'USD':'symbol':'4.0-0' }}</td>
-            <ion-button class="center-buttons" color="dark" [routerLink]="['/r3']">Ver detalles</ion-button>
-            <ion-button class="center-buttons" *ngIf="rol == 2" color="dark" [routerLink]="['/editar-p-admin']">Modificar</ion-button>
+            <ion-button class="center-buttons" *ngIf="rol == 1" [routerLink]="['/r3']">Ver detalles</ion-button>
+            <ion-button class="center-buttons" *ngIf="rol == 2" [routerLink]="['/editar-p-admin']">Modificar</ion-button>
+            <ion-button class="borrar" *ngIf="rol == 2" >Eliminar</ion-button>
           </ion-card-content>
         </ion-card-header>
       </ion-card>
@@ -128,8 +132,9 @@
           <ion-card-title class="ion-title">Reloj Analógico <br>negro fondo azul</ion-card-title>
           <ion-card-content>
             <td>{{ dinero8 | currency:'USD':'symbol':'4.0-0' }}</td>
-            <ion-button class="center-buttons" color="dark" [routerLink]="['/r4']">Ver detalles</ion-button>
-            <ion-button class="center-buttons" *ngIf="rol == 2" color="dark" [routerLink]="['/editar-p-admin']">Modificar</ion-button>
+            <ion-button class="center-buttons" *ngIf="rol == 1" [routerLink]="['/r4']">Ver detalles</ion-button>
+            <ion-button class="center-buttons" *ngIf="rol == 2" [routerLink]="['/editar-p-admin']">Modificar</ion-button>
+            <ion-button class="borrar" *ngIf="rol == 2" >Eliminar</ion-button>
           </ion-card-content>
         </ion-card-header>
       </ion-card>
@@ -140,8 +145,9 @@
           <ion-card-title class="ion-title">Reloj Analógico <br>amarillo con negro</ion-card-title>
           <ion-card-content>
             <td>{{ dinero9 | currency:'USD':'symbol':'4.0-0' }}</td>
-            <ion-button class="center-buttons" color="dark" [routerLink]="['/r5']">Ver detalles</ion-button>
-            <ion-button class="center-buttons" *ngIf="rol == 2" color="dark" [routerLink]="['/editar-p-admin']">Modificar</ion-button>
+            <ion-button class="center-buttons" *ngIf="rol == 1" [routerLink]="['/r5']">Ver detalles</ion-button>
+            <ion-button class="center-buttons" *ngIf="rol == 2" [routerLink]="['/editar-p-admin']">Modificar</ion-button>
+            <ion-button class="borrar" *ngIf="rol == 2" >Eliminar</ion-button>
           </ion-card-content>
         </ion-card-header>
       </ion-card>
@@ -158,8 +164,9 @@
           <ion-card-title class="ion-title">Reloj Digital negro<br> con borde azul</ion-card-title>
           <ion-card-content>
             <td>{{ dinero10 | currency:'USD':'symbol':'4.0-0' }}</td>
-            <ion-button class="center-buttons" color="dark" [routerLink]="['/rd2']">Ver detalles</ion-button>
-            <ion-button class="center-buttons" *ngIf="rol == 2" color="dark" [routerLink]="['/editar-p-admin']">Modificar</ion-button>
+            <ion-button class="center-buttons" *ngIf="rol == 1" [routerLink]="['/rd2']">Ver detalles</ion-button>
+            <ion-button class="center-buttons" *ngIf="rol == 2" [routerLink]="['/editar-p-admin']">Modificar</ion-button>
+            <ion-button class="borrar" *ngIf="rol == 2" >Eliminar</ion-button>
           </ion-card-content>
         </ion-card-header>
       </ion-card>
@@ -170,8 +177,9 @@
           <ion-card-title class="ion-title">Reloj Digital<br>negro</ion-card-title>
           <ion-card-content>
             <td>{{ dinero11 | currency:'USD':'symbol':'4.0-0' }}</td>
-            <ion-button class="center-buttons" color="dark" [routerLink]="['/rd5']">Ver detalles</ion-button>
-            <ion-button class="center-buttons" *ngIf="rol == 2" color="dark" [routerLink]="['/editar-p-admin']">Modificar</ion-button>
+            <ion-button class="center-buttons" *ngIf="rol == 1" [routerLink]="['/rd5']">Ver detalles</ion-button>
+            <ion-button class="center-buttons" *ngIf="rol == 2" [routerLink]="['/editar-p-admin']">Modificar</ion-button>
+            <ion-button class="borrar" *ngIf="rol == 2" >Eliminar</ion-button>
           </ion-card-content>
         </ion-card-header>
       </ion-card>
@@ -182,8 +190,9 @@
           <ion-card-title class="ion-title">Reloj Digital<br>blanco</ion-card-title>
           <ion-card-content>
             <td>{{ dinero12 | currency:'USD':'symbol':'4.0-0' }}</td>
-            <ion-button class="center-buttons" color="dark" [routerLink]="['/rd6']">Ver detalles</ion-button>
-            <ion-button class="center-buttons" *ngIf="rol == 2" color="dark" [routerLink]="['/editar-p-admin']">Modificar</ion-button>
+            <ion-button class="center-buttons" *ngIf="rol == 1" [routerLink]="['/rd6']">Ver detalles</ion-button>
+            <ion-button class="center-buttons" *ngIf="rol == 2" [routerLink]="['/editar-p-admin']">Modificar</ion-button>
+            <ion-button class="borrar" *ngIf="rol == 2" >Eliminar</ion-button>
           </ion-card-content>
         </ion-card-header>
       </ion-card>
@@ -200,8 +209,9 @@
             <ion-card-title class="ion-title">Reloj Smartwatch<br>Azul</ion-card-title>
             <ion-card-content>
               <td>{{ dinero13 | currency:'USD':'symbol':'4.0-0' }}</td>
-              <ion-button class="center-buttons" color="dark" [routerLink]="['/rs1']">Ver detalles</ion-button>
-              <ion-button class="center-buttons" *ngIf="rol == 2" color="dark" [routerLink]="['/editar-p-admin']">Modificar</ion-button>
+              <ion-button class="center-buttons" *ngIf="rol == 1" [routerLink]="['/rs1']">Ver detalles</ion-button>
+              <ion-button class="center-buttons" *ngIf="rol == 2" [routerLink]="['/editar-p-admin']">Modificar</ion-button>
+              <ion-button class="borrar" *ngIf="rol == 2" >Eliminar</ion-button>
             </ion-card-content>
           </ion-card-header>
         </ion-card>
@@ -212,8 +222,9 @@
             <ion-card-title class="ion-title">Reloj Smartwatch<br>anaranjado</ion-card-title>
             <ion-card-content>
               <td>{{ dinero14 | currency:'USD':'symbol':'4.0-0' }}</td>
-              <ion-button class="center-buttons" color="dark" [routerLink]="['/rs3']">Ver detalles</ion-button>
-              <ion-button class="center-buttons" *ngIf="rol == 2" color="dark" [routerLink]="['/editar-p-admin']">Modificar</ion-button>
+              <ion-button class="center-buttons" *ngIf="rol == 1" [routerLink]="['/rs3']">Ver detalles</ion-button>
+              <ion-button class="center-buttons" *ngIf="rol == 2" [routerLink]="['/editar-p-admin']">Modificar</ion-button>
+              <ion-button class="borrar" *ngIf="rol == 2" >Eliminar</ion-button>
             </ion-card-content>
           </ion-card-header>
         </ion-card>
@@ -224,14 +235,15 @@
             <ion-card-title class="ion-title">Reloj Smartwatch<br>morado</ion-card-title>
             <ion-card-content>
               <td>{{ dinero15 | currency:'USD':'symbol':'4.0-0' }}</td>
-              <ion-button class="center-buttons" color="dark" [routerLink]="['/rs5']">Ver detalles</ion-button>
-              <ion-button class="center-buttons" *ngIf="rol == 2" color="dark" [routerLink]="['/editar-p-admin']">Modificar</ion-button>
+              <ion-button class="center-buttons" *ngIf="rol == 1" [routerLink]="['/rs5']">Ver detalles</ion-button>
+              <ion-button class="center-buttons" *ngIf="rol == 2" [routerLink]="['/editar-p-admin']">Modificar</ion-button>
+              <ion-button class="borrar" *ngIf="rol == 2" >Eliminar</ion-button>
             </ion-card-content>
           </ion-card-header>
         </ion-card>
     </ion-row>
   </ion-grid>
-
+<br><br><br>
   <app-componente2></app-componente2>
 
 </ion-content>
