--- a/src/app/pages/categoria/audigamer/audigamer.page.html
+++ b/src/app/pages/categoria/audigamer/audigamer.page.html
@@ -42,7 +42,7 @@
               <p>$139.000</p>
             </ion-card-content>
           </ion-card-header>
-        </ion-card>
+        </ion-card><br><br>
       </p>
     </ion-row>
   </ion-grid>
