--- a/src/app/pages/categoria/relojsma/relojsma.page.html
+++ b/src/app/pages/categoria/relojsma/relojsma.page.html
@@ -41,7 +41,7 @@
               <p>$360.000</p>
             </ion-card-content>
           </ion-card-header>
-        </ion-card>
+        </ion-card><br><br>
       </p>
     </ion-row>
   </ion-grid>
