--- a/src/app/pages/productos/rs3/rs3.page.html
+++ b/src/app/pages/productos/rs3/rs3.page.html
@@ -12,12 +12,11 @@
         <p class="subti" style="font-size: 25px;">Precio: $240.000</p>
         <p class="subti">Descripción:</p>
         <p>Este reloj
-          combina estilo y tecnología. Con 
-          pantalla táctil, se enlaza con tu 
+          combina estilo y tecnología, se enlaza con tu 
           teléfono para notificaciones y 
           seguimiento de salud. Su llamativo 
           color naranja y opciones de personalización 
-          lo hacen funcional y a la moda.</p>
+          lo hace muy moderno.</p>
         <ion-button [routerLink]="['/carrito']">Agregar al carrito</ion-button>
       </ion-card-content>
     </ion-card>
