--- a/src/app/pages/productos/rs5/rs5.page.html
+++ b/src/app/pages/productos/rs5/rs5.page.html
@@ -12,14 +12,13 @@
         <p class="subti" style="font-size: 25px;">Precio: $360.000</p>
         <p class="subti">Descripción:</p>
         <p>Este reloj fusiona
-          moda y funcionalidad. Con pantalla
-          táctil, se conecta a tu teléfono
+          moda y funcionalidad, se conecta a tu teléfono
           para notificaciones y monitoreo
           de salud. Su color y sus opciones de personalización
           lo convierten en un reloj elegante y útil.</p>
         <ion-button [routerLink]="['/carrito']">Agregar al carrito</ion-button>
       </ion-card-content>
     </ion-card>
-  </div>
+  </div><br><br>
   <app-componente2></app-componente2>
 </ion-content>
