--- a/src/app/pages/Shop/carrito/carrito.page.html
+++ b/src/app/pages/Shop/carrito/carrito.page.html
@@ -12,8 +12,7 @@
         <ion-card-title class="titulo" style="font-size: 25px;">Audifonos gamers negro con naranja</ion-card-title>
         <br>
         <p class="subti" style="font-size: 25px;">Precio: $70.000</p>
-        <p>Cantidad: 2 </p>
-        <ion-button class="btn" shape="round" color="medium">+</ion-button><ion-button class="btn" shape="round" color="medium">-</ion-button>
+        <p>Cantidad: 2 </p> <ion-button class="btn" shape="round" >+</ion-button><ion-button class="btn" shape="round" >-</ion-button>
         <br>
       </ion-card-content>
     </ion-card>
@@ -23,9 +22,9 @@
     <ion-card class="custom-card">
       <ion-card-content class="card-content">
         <ion-card-title style="font-size: 25px;">Total</ion-card-title>
-        <p class="subti"  style="font-size: 20px;">$70.000</p>
+        <p class="subti"  style="font-size: 30px;">$70.000</p>
         <!--BOTONES-->
-        <ion-button color="danger"><ion-icon name="trash-bin-outline"></ion-icon></ion-button><ion-button [routerLink]="['/carrito']">Finalizar compra</ion-button>
+        <ion-button color="danger"><ion-icon name="trash-bin-outline"></ion-icon></ion-button><ion-button  [routerLink]="['/carrito']">Finalizar compra</ion-button>
         <!---->
       </ion-card-content>
     </ion-card>
