--- a/src/app/pages/categoria/audiina/audiina.page.html
+++ b/src/app/pages/categoria/audiina/audiina.page.html
@@ -41,7 +41,7 @@
               <p>$269.000</p>
             </ion-card-content>
           </ion-card-header>
-        </ion-card>
+        </ion-card><br><br>
       </p>
     </ion-row>
   </ion-grid>
