--- a/src/app/pages/categoria/relojsma/relojsma.page.scss
+++ b/src/app/pages/categoria/relojsma/relojsma.page.scss
@@ -6,7 +6,8 @@ ion-img {
 
 /* Estilos generales para las tarjetas */
 ion-card {
-    background-color: #222222;
+    background-color: #010626;
+    box-shadow: 0px 2px 6px #F079F2;
     width: fit-content;
     height: max-content;
 }
@@ -57,5 +58,5 @@ ion-card-title {
 
 /* Estilos para el fondo */
 ion-content {
-    --background: url(https://i.pinimg.com/originals/77/42/0d/77420df3f9e33db5b79ee25455d3340e.png);
+    --background: url(https://w0.peakpx.com/wallpaper/955/141/HD-wallpaper-purple-science-tech.jpg);
 }
