--- a/src/app/pages/inicio/datos-personales/datos-personales.page.html
+++ b/src/app/pages/inicio/datos-personales/datos-personales.page.html
@@ -8,47 +8,34 @@
   <ion-grid>
     <ion-row>
       <ion-card>
-        <form id="registration-form">
-          <ion-card-title>Datos personales</ion-card-title>
-          <ion-card-content>
-            <!--NOMBRE-->
-            <div class="input-row">
-              <ion-input label="Nombre:" type="text" name="nombre" minlength="3" maxlength="15" required
-                (keydown)="onKeyDown($event)" [(ngModel)]="nombreEnviado" #nombreEnviadoModel="ngModel"
-                label-placement="floating" fill="outline" [value]="nombreEnviado">
-              </ion-input>
-              <div class="error-message"
-                *ngIf="nombreEnviadoModel.invalid && (nombreEnviadoModel.dirty || nombreEnviadoModel.touched)">
-                <p *ngIf="nombreEnviadoModel.errors?.['required']">El nombre es obligatorio</p>
-                <p *ngIf="nombreEnviadoModel.errors?.['minlength']">El nombre debe tener al menos 3 caracteres.</p>
-                <p *ngIf="nombreEnviadoModel.errors?.['maxlength']">El nombre no debe exceder los 15 caracteres.</p>
-              </div>
-            </div>
-            <br>
-            <!--APELLIDO-->
-            <ion-input label="Apellido:" type="text" name="apellido" minlength="3" maxlength="15" required
-              (keydown)="onKeyDown($event)" [(ngModel)]="apellidoEnviado" #apellidoEnviadoModel="ngModel"
-              label-placement="floating" fill="outline" [value]="apellidoEnviado">
+        <ion-card-title>Datos personales</ion-card-title>
+        <ion-card-content>
+          <!--NOMBRE-->
+          <div class="input-row">
+            <ion-input label="Nombre:" type="text" name="nombre" minlength="3" maxlength="15" required
+              (keydown)="onKeyDown($event)" [(ngModel)]="nombreEnviado" #nombreEnviadoModel="ngModel"
+              label-placement="floating" fill="outline" [value]="nombreEnviado">
             </ion-input>
-            <div class="error-message"
-              *ngIf="apellidoEnviadoModel.invalid && (apellidoEnviadoModel.dirty || apellidoEnviadoModel.touched)">
-              <p *ngIf="apellidoEnviadoModel.errors?.['required']">El apellido es obligatorio</p>
-              <p *ngIf="apellidoEnviadoModel.errors?.['minlength']">El Apellido debe tener al menos 3 caracteres.</p>
-              <p *ngIf="apellidoEnviadoModel.errors?.['maxlength']">El apellido no debe exceder los 15 caracteres.</p>
-            </div>
-            <br>
-            <!--CORREO-->
-            <ion-input label="Correo electrónico:" type="email" label-placement="floating" required readonly
-              fill="outline" placeholder="profeponga7@gmail.com" [value]="emailEnviado"></ion-input>
-            <br>
-            <!--RUT-->
-            <ion-input label="Rut:" type="text" label-placement="floating" fill="outline" [value]="rutEnviado" required
-              readonly placeholder="26.098.098-2"></ion-input>
-            <br>
-            <ion-button expand="50px" style="align-content: center;align-items: center;display: flex;"
-              type="submit">Guardar cambios</ion-button>
-          </ion-card-content>
-        </form>
+          </div>
+          <br>
+          <!--APELLIDO-->
+          <ion-input label="Apellido:" type="text" name="apellido" minlength="3" maxlength="15" required
+            (keydown)="onKeyDown($event)" [(ngModel)]="apellidoEnviado" #apellidoEnviadoModel="ngModel"
+            label-placement="floating" fill="outline" [value]="apellidoEnviado">
+          </ion-input>
+          <br>
+          <!--CORREO-->
+          <ion-input label="Correo electrónico:" type="email" label-placement="floating" required readonly
+            fill="outline" placeholder="profeponga7@gmail.com" [value]="emailEnviado"></ion-input>
+          <br>
+          <!--RUT-->
+          <ion-input label="Rut:" type="text" label-placement="floating" fill="outline" [value]="rutEnviado" required
+            readonly placeholder="26.098.098-2"></ion-input>
+          <br>
+          <!--BOTON-->
+          <ion-button expand="50px" style="align-content: center;align-items: center;display: flex;"
+          [routerLink]="['/m-datos']">Modificar datos</ion-button>
+        </ion-card-content>
       </ion-card>
     </ion-row>
   </ion-grid>
