--- a/src/app/pages/productos/rs1/rs1.page.scss
+++ b/src/app/pages/productos/rs1/rs1.page.scss
@@ -7,10 +7,11 @@
 }
 
 .custom-card {
-    background: #222222;
+    box-shadow: 0px 2px 6px #69348b;
+    background: #010626;
     display: flex;
     align-items: center;
-    width: 80%;
+    width: 95%;
 }
 
 .card-image {
@@ -47,28 +48,40 @@ p {
     margin: 2px;
 }
 
+ion-button {
+    --background: #F079F2;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 ion-content {
-    --background: url(https://i.pinimg.com/originals/77/42/0d/77420df3f9e33db5b79ee25455d3340e.png);
+    --background: url(https://w0.peakpx.com/wallpaper/955/141/HD-wallpaper-purple-science-tech.jpg);
 }
 
 /* Estilos para pantallas pequeñas (por ejemplo, cuando el ancho de la ventana es menor a 768px) */
 @media screen and (max-width: 480px) {
     .custom-card {
-        flex-direction: column; /* Cambia la dirección de flex para apilar contenido */
+        flex-direction: column;
+        /* Cambia la dirección de flex para apilar contenido */
         width: 100%;
     }
 
     .card-image {
         width: 100%;
-        max-width: none; /* Elimina la limitación del ancho máximo */
+        max-width: none;
+        /* Elimina la limitación del ancho máximo */
     }
 
     .card-content {
-        padding: 10px; /* Reduce el espacio alrededor del contenido */
-        text-align: center; /* Centra el texto en pantallas más pequeñas */
+        padding: 10px;
+        /* Reduce el espacio alrededor del contenido */
+        text-align: center;
+        /* Centra el texto en pantallas más pequeñas */
     }
 
     .titulo {
-        font-size: 25px; /* Reduce el tamaño del título */
+        font-size: 25px;
+        /* Reduce el tamaño del título */
     }
 }
