--- a/src/app/pages/productos/ag3/ag3.page.html
+++ b/src/app/pages/productos/ag3/ag3.page.html
@@ -4,14 +4,13 @@
 <!--################################################PRODUCTOS########################################-->
   <ion-content class="ion-padding">
     <div class="card-container">
-      <ion-card class="custom-card">
-        <img src="assets/AUDIFONOS GAMERS/ag3.webp" alt="" class="card-image">
+      <ion-card class="custom-card" *ngFor="let producto of arregloProductos">
+        <img [src]="producto.foto" alt="" class="card-image">
         <ion-card-content class="card-content">
-          <ion-card-title class="titulo">Audífonos gamers rojos con negro</ion-card-title>
-          <p class="subti" style="font-size: 25px;">Precio: $50.000</p>
+          <ion-card-title class="titulo">{{ producto.nombreProducto }}</ion-card-title>
+          <p class="subti" style="font-size: 25px;">Precio: ${{ producto.precio }}</p>
           <p class="subti">Descripción:</p>
-          <p>Auriculares gamer rojos con diseño llamativo y 
-            elegante, brindando sonido inmersivo y comodidad en sus oidos.</p>
+          <p>${{ producto.descripcion }}</p>
           <ion-button [routerLink]="['/carrito']">Agregar al carrito</ion-button>
         </ion-card-content>
       </ion-card>
